# py-aquacrop

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
aquacrop/: __init__.py  aquacrop.py  templates.py
aquacrop/entities/: calendar.py
aquacrop/templates/data/: __init__.py
docs/notebooks/: 01_basic_simulation.ipynb  02_ottawa_simulation.ipynb  03_irrigation.ipynb  installation_and_setup.ipynb
tests/file_generators/: test_cal_generator.py  test_cli_generator.py  test_co2_generator.py  test_crop_generator.py  test_et0_generator.py  test_gwt_generator.py  test_irr_generator.py  test_man_generator.py  test_obs_generator.py  test_off_generator.py  test_plu_generator.py  test_ppm_generator.py  test_prm_generator.py  test_results_generator.py  test_sol_generator.py  test_sw0_generator.py  test_tnx_generator.py
tests/referenceFiles/LIST/: Ottawa.PRM
tests/referenceFiles/OUTP/: OttawaPRM1evaluation.OUT  OttawaPRM2evaluation.OUT  OttawaPRM3evaluation.OUT  OttawaPRMday.OUT  OttawaPRMharvests.OUT  OttawaPRMseason.OUT
tests/referenceFiles/SIMUL/: DEFAULT.CRO  OttawaReference.Tnx  TCropReference.SIM  TnxReference365Days.SIM
