[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aquacrop_py"
version = "0.1.0"
description = "Python wrapper for the AquaCrop crop growth model"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "python-dotenv==0.20.0",
    "pytest==8.3.3",
    "pandas==2.2.3",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/aquacrop-py"
"Bug Tracker" = "https://github.com/yourusername/aquacrop-py/issues"

[tool.setuptools]
# Use find_packages to include all packages and subpackages
packages = ["aquacrop"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.txt", "*.dat", "*.csv"]